recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:31: error: not enough arguments for method motif: (length: Double, levels: Int, k: Int)Unit.
Unspecified value parameter k.
	motif(length,levels)
             ^